src/components/Home/elements/ThirdBanner/styles.module.scss
@import '@styles/index.scss';

._bannerContainer{
  width: 100%;
  min-height: 80vh;
  background:black;
  display: flex;
  justify-content: center;
  padding: 3rem 0;
  overflow: hidden;
}
._container {
  width: 95%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
._content{
display: flex;
flex-direction: column;
}
._title{
  font-size: 6.50rem;
  font-family: 'NormalFont', sans-serif;
  font-weight: 700;
  color: white;
}

._blue{
  color: #134EBF;
  margin-right: 1.4rem;
  font-size: 6.50rem;
  font-family: 'NormalFont', sans-serif;
  font-weight: 700;
}

._subtitleContainer{
display: flex;
justify-content: space-between;
padding-bottom: 1.5rem;
margin: 5rem 5rem 0 0;
}

._haloContainer{
  position:relative
}
._imageContainer{
  position: absolute;
  top: -70px;
  right: -65px;
  width: 300px;
}

._subtitle{
  font-size: 1.5rem;
  font-family: 'LightFont', sans-serif;
  font-weight: 300;
  color: white;
  text-align: center;
}

._stepsContainer{
  margin: 0.6rem auto;
  width: 35%;
}
._stepsShortContainer{
  margin: 0.6rem auto;
  width: 15%;
}
._imageContainerResponsive{
  display: none;
}

._parent {
  position: relative;
}

@include responsive(xl) {
  ._imageContainer{
    right: -60px;
    width: 270px;
  }

  ._subtitleContainer{
    margin: 5rem 3rem 0 0;
  }
}

@include responsive(lg) {
  ._stepsContainer{
    display: none;
  }
  ._stepsShortContainer{
    display: none;
  }
}

@include responsive(md) {
  ._title{
    font-size: 2.6rem;
  }
  ._parent {
    position: relative;
  }
  ._blue{
    // margin: 0 0.5rem;
    font-size: 2.6rem;
  }
  ._bannerContainer{
    min-height: 50vh;
    padding: 3rem 0 1.5rem 0;
  }
  ._subtitle{
    font-size: 0.8125rem
  }
  ._imageContainer{
    display: none;
  }
  ._subtitleContainer{
    margin-top: 2rem;
  }
  ._imageContainerResponsive{
    display: block;
    position: absolute;
    top: -50%;
    left: 50%;
    transform: translate(-45%, 0);
  }
 }

